--- a/html/index.html
+++ b/html/index.html
@@ -12,7 +12,7 @@
 <body>
     <main id="main_content">
     </main>
-    <template id="log_in">
+    <template id="log_in" class="page active">
         <form onsubmit="login(event)">
             <h1>log in</h1>
             <label for="email_login">email</label>
@@ -24,7 +24,7 @@
         </form>
     </template>
 
-    <template id="sign_up">
+    <template id="sign_up" class="page">
         <form id="sign_up_form" onsubmit="signup(event)">
             <h1>sign up</h1>
             <label for="name_sign_up">name</label>
@@ -40,16 +40,19 @@
         </form>
     </template>
 
-    <template id="main">
+    <template id="main" class="page">
         <h1>my shopping list</h1>
         <button id="add_product_btn">add new product</button>
-        <form id="add_product_form" onsubmit="post(event)"></form>
+
         <button id="delete_product_btn">delete product</button>
         <button id="show_list_btn">show updated list</button>
         <button id="show_category_btn">show products by category</button>
-        <form id="category_to_get" onsubmit="get(event)"></form>
+              
+        <form id="category_to_get" onsubmit="get_ctg(event)"></form>
+        <form id="add_product_form" onsubmit="post(event)"></form>  
         <table id="list_table"></table>
         <h2 id="fail_message"></h2>
+        <button id="log_out">log out</button>
     </template>
     
 </body>
